# parkingApp

./: .env  .test.env  README.md  info.txt  main.py  pyproject.toml
src/config/: config.py
src/data/: cars.py  colors.py  countries.py  domains.py  years.py
src/db/: db.py  models.py
src/repositories/: rp_app.py  rp_clients.py  rp_data.py  rp_place_service.py  rp_places.py  rp_plans.py  rp_roles.py  rp_services.py  rp_users.py
src/routes/application/: application.py
src/routes/auth/: auth.py
src/routes/clients/: clients.py
src/routes/orders/: orders.py
src/routes/parking/: parking.py
src/routes/payments/: payments.py
src/routes/plans/: plans.py
src/routes/profile/: profile.py
src/routes/restore/: restore.py
src/routes/services/: services.py
src/routes/users/: users.py
src/schemas/application/: application_schema.py
src/schemas/clients/: clients_schema.py
src/schemas/orders/: orders_schemas.py
src/schemas/places/: places_schema.py
src/schemas/plans/: plans_schema.py
src/schemas/roles/: roles_schema.py
src/schemas/services/: services_schema.py
src/services/: authorization.py
src/utils/: elementaries.py
static/css/: application.css  auth.css  btns.css  create.css  default.css  footer.css  main.css  navigation.css  pagination.css  parking.css  path.css  plan.css  themes.css  titles.css  working-plan.css
static/js/: navigation.js
templates/: base.html  index.html  info.html
templates/elements/: menu.html  pagination.html  plan.html  popup.html  preview.html  user_menu.html  working-plan.html
(+62 files in other folders)
